<resources>
    <string name="app_name">MyRGR</string>
    <string name="title_activity_home">Casa</string>
    <string name="your_web_client_id">338976268196-snph3hodp90a3jj1kvni909ss697ap7p.apps.googleusercontent.com</string>
    <string name="gmail">Gmail</string>
    <string name="contra">Contraseña</string>
    <string name="registro">Registrar</string>
    <string name="iniciosesion">Iniciar Sesión</string>
    <string name="google">Iniciar con Google</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="recuperar">Recuperar</string>
    <string name="volver">Volver</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="lista">Aquí tienes para hacer tu lista:</string>
    <string name="procedencia">Procedencia</string>
    <string name="modificar">Modificar</string>
    <string name="cantidad">Cantidad</string>
    <string name="insertar">Insertar</string>
    <string name="consultar">Consultar</string>
    <string name="cerrar">Cerrar</string>
    <string name="nombreverdura">Nombre de la Verdura</string>
    <string name="vermas">Ver Más</string>
    <string name="conexion">Conexión no establecida</string>
    <string name="error">Error</string>
    <string name="campos">Por favor, rellene todos los campos</string>
    <string name="valicontra">La contraseña debe de tener al menos 8 caracteres</string>
    <string name="incorrectoUsuContra">Usuario o contraseña incorrectos</string>
    <string name="aceptar">Aceptar</string>
    <string name="productoinsertado">Producto Insertado</string>
    <string name="existenombre">Ya existe ese nombre. Producto no insertada</string>
    <string name="borroproducto">Se borró el producto con ese nombre</string>
    <string name="noexisteproducto">No existe un producto con ese nombre</string>
    <string name="modificaciondatos">Se modificaron los datos</string>
    <string name="nomasdatos">No existen más datos</string>
    <string name="cerradasesionComp">Cerrada sesión completamente</string>
    <string name="almacenado">Almacenado</string>
    <string name="ocurridoerror">Ha ocurrido un error</string>
    <string name="eliminado">Eliminado</string>
    <string name="noencontradodocumento">No se ha encontrado el documento a eliminar</string>
    <string name="recuperado">Rcuperado</string>
    <string name="idomal">Algo ha ido mal al recuperar</string>
    <string name="datosrecuperados">Datos Recuperados</string>
    <string name="nombrenodisponible">Nombre no disponible</string>
    <string name="edadnodisponible">Edad no disponible</string>
    <string name="iradatospersonales">Ir al apartado de datos personales</string>
    <string name="deseair">¿Desea ir al apartado de datos personales?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="enlace1">Enlace Github</string>
    <string name="enlace2">Página Huerto</string>
    <string name="correo">Enviar Correo</string>
    <string name="confirmareliminacion">¿Estás seguro de que quieres eliminar?</string>
    <string name="eliminadoexitosamente">Eliminado exitosamente</string>
    <string name="editarfoto">Editar Foto</string>
    <string name="fichatecnica">Ficha Técnica</string>
    <string name="cuestionario">Cuestionario</string>
    <string name="disponibilidadperros">Disponibilidad de Perros</string>
    <string name="cargargaleria">Cargar Imagen</string>
    <string name="abrircamara">Abrir Cámara</string>
    <string name="hecho">Hecho</string>
    <string name="nombreperro">Nombre del Perro</string>
    <string name="raza">Raza</string>
    <string name="tengointeres">Tengo Interés</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="descripcion">Descripción</string>
    <string name="anadirimagen">AñadirImagen</string>
</resources>