<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/cieloblue">

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="252dp"
        android:layout_height="30dp"
        android:text="Email"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="200dp"
        android:layout_height="171dp"
        android:scaleType="centerCrop"
        android:src="@drawable/muneco"
        app:civ_border_color="@color/md_theme_dark_inversePrimary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />






    <Button
        android:id="@+id/btCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrarsesion"
        app:icon="@drawable/ic_cerrarsesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:icon="@drawable/ic_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <ImageButton
        android:id="@+id/btnInscribirse"
        android:layout_width="100dp"
        android:layout_height="84dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/inscribirse" />

    <ImageButton
        android:id="@+id/btEliminar"
        android:layout_width="100dp"
        android:layout_height="84dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/delet" />

    <ImageButton
        android:id="@+id/btRecuperar"
        android:layout_width="100dp"
        android:layout_height="84dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fichatecnic"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/fichatec" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:text="@string/registro"
        android:textColor="@color/blup"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/elim"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:text="@string/eliminar"
        android:textAlignment="center"
        android:textColor="@color/blup"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/fichatecnic"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:text="@string/fichatecnica"
        android:textColor="@color/blup"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="117dp"
        android:layout_height="42dp"
        android:text="@string/editarfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fichatecnic"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        app:layout_constraintVertical_bias="0.014" />


</androidx.constraintlayout.widget.ConstraintLayout>